--- a/styles/style.css
+++ b/styles/style.css
@@ -22,3 +22,85 @@
 .box{
     width: 65%;
 }
+.liste{
+    width: 100%;
+    height: 100vh;
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    background: #407ee173; 
+    background-size: cover;
+}
+.form{
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.986);
+    border: 1px solid #ccc;
+    border-radius: 10px;
+
+}
+.form-group{
+    border: none;
+    margin-top: 10px;
+    background: rgba(170, 49, 49, 0);
+    color: #000;
+    
+}
+.form-group input{
+    border: none;
+    background: rgba(170, 49, 49, 0);
+    color: #000;
+    font-weight: bold;
+    border-bottom: 1px solid rgb(255, 255, 255);
+    /* width: 100%;
+    height: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
+    outline: none; */
+}
+
+.modal-body .form-group input{
+    border-bottom: 1px solid rgb(69, 73, 77);
+}
+
+    .searchbar{
+    margin-bottom: auto;
+    margin-top: auto;
+    height: 60px;
+    background-color: #d4d9e4;
+    border-radius: 30px;
+    padding: 10px;
+    }
+
+    .search_input{
+    color: white;
+    border: 0;
+    outline: 0;
+    background: none;
+    width: 0;
+    caret-color:transparent;
+    line-height: 40px;
+    transition: width 0.4s linear;
+    }
+
+    .searchbar:hover > .search_input{
+    padding: 0 10px;
+    width: 150px;
+    caret-color:red;
+    transition: width 0.4s linear;
+    }
+
+    .searchbar:hover > .search_icon{
+    background: white;
+    color: #e74c3c;
+    }
+
+    .search_icon{
+    height: 40px;
+    width: 40px;
+    float: right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color:white;
+    text-decoration:none;
+    }
