--- a/view/Liste.html
+++ b/view/Liste.html
@@ -9,8 +9,6 @@
     <script src="../assets/bootstrap5/js/bootstrap.min.js" defer></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.js" ></script>
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
     <title>Gestionnaire UFR/SDS</title>
@@ -41,15 +39,15 @@
         <a class="btn-primary btn">Liste des Etudiant</a>
       </div>
     </div>
-    <div class="container">
+    <div class="">
       <div class="row d-flex">
         <form
           action="../controller/liste.php"
           method="POST"
           class="d-flex form justify-content-center"
         >
-          <div class="col-6">
-            <h3>INFO Etudiant</h3>
+          <div class="col-6 " >
+            <h3 class="text-center"> INFO ETUDIANT</h3>
             <div class="form-group">
               <input
                 type="text"
@@ -66,6 +64,15 @@
                 id="prenom"
                 name="prenom"
                 placeholder="Prenom"
+              />
+            </div>
+            <div class="form-group">
+              <input
+                type="date"
+                class="form-control"
+                id="ddn"
+                name="ddn"
+                placeholder="Date de Naissance"
               />
             </div>
             <div class="form-group">
@@ -119,15 +126,6 @@
                   value="non"
                 />
                 <label class="form-check-label" for="sexe"> non </label>
-              </div>
-            
-            </div>
-            <div class="container" >
-              <div class="d-flex justify-content-center h-100">
-                <div class="searchbar">
-                  <input class="search_input" type="text" name="" placeholder="Search...">
-                  <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
-                </div>
               </div>
             </div>
             <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
