--- a/view/Liste.html
+++ b/view/Liste.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="../styles/style.css" />
     <link rel="stylesheet" href="../assets/bootstrap5/css/bootstrap.min.css" />
     <script src="../assets/bootstrap5/js/bootstrap.min.js" defer></script>
-    <link
-      rel="stylesheet"
-      href="//cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css"
-    />
+    <link rel="stylesheet" href="../assets/jquery.dataTables.min.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -18,10 +15,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <script
-      src="//cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"
-      defer
-    ></script>
+    <script src="../assets/jquery.dataTables.min.js" defer></script>
     <script src="../assets/jquery-3.6.0.min.js"></script>
     <title>Gestionnaire UFR/SDS</title>
   </head>
@@ -124,9 +118,11 @@
       aria-hidden="true"
     >
       <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content border border-3 border-danger">
           <div class="modal-header">
-            <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+            <h5 class="modal-title" id="staticBackdropLabel">
+              SUPPRESSION [ NOM DE L'ETUDIANT]
+            </h5>
             <button
               type="button"
               class="btn-close"
@@ -134,16 +130,18 @@
               aria-label="Close"
             ></button>
           </div>
-          <div class="modal-body">...</div>
+          <div class="modal-body">
+            Voulez-vous vraiment supprimer cet etudiant ?
+          </div>
           <div class="modal-footer">
             <button
               type="button"
               class="btn btn-secondary"
               data-bs-dismiss="modal"
             >
-              Close
+              Annuler
             </button>
-            <button type="button" class="btn btn-primary">Understood</button>
+            <button type="button" class="btn btn-danger">Supprimer</button>
           </div>
         </div>
       </div>
