--- a/view/inscription.html
+++ b/view/inscription.html
@@ -51,7 +51,7 @@
           <h1>ENREGISTREMENT</h1>
         </div>
         <div class="col-md-2">
-          <button class="btn btn-primary">LISTE</button>
+          <a class="btn btn-primary" href="Liste.php">LISTE</a>
         </div>
       </div>
       <form action="../controller/inscription.php" method="POST">
